--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body{
 .car, .enemy{
     width: 50px;
     height: 100px;
-    background: transparent url("docs/image/player.png") center / cover no-repeat;
+    background: transparent url("image/player.png") center / cover no-repeat;
     position: absolute;
 }
 
